public/frontend/css/main.css
/* ... */
@media only screen and (max-width: 992px) {
  .hero-content-3 .sub-title {
    font-size: 22px;
    margin-bottom: 15px;
  }
}
.hero-content-3 .title {
  font-size: 72px;
  font-weight: 700;
  text-transform: uppercase;
  margin-bottom: 20px;
}
@media only screen and (max-width: 992px) {
  .hero-content-3 .title {
    font-size: 40px;
  }
}
.hero-content-3 span {
  color: var(--rr-color-heading-primary);
  font-size: 20px;
  font-weight: 400;
  display: block;
  margin-bottom: 30px;
}

/* !END: Hero CSS */
/**----------------------------------------
    START: Category CSS
----------------------------------------*/
.category-top .swiper-arrow {
  display: flex;
  align-items: center;
  column-gap: 15px;
}
.category-top .swiper-arrow .swiper-nav {
  background-color: var(--rr-color-grey-1);
  height: 45px;
  width: 45px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--rr-color-text-body);
  border-radius: 50%;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.category-top .swiper-arrow .swiper-nav:hover {
  background-color: var(--rr-color-theme-primary);
  color: var(--rr-color-common-white);
}

.category-item {
  background-color: var(--rr-color-grey-1);
  padding: 10px 10px 15px 10px;
  border-radius: 6px;
  text-align: center;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.category-item .category-img img {
  border-radius: 6px;
}
.category-item .title {
  font-size: 16px;
  font-weight: 600;
  margin-top: 15px;
  margin-bottom: 0;
  text-transform: uppercase;
}
.category-item .title a {
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}
.category-item:hover {
  background-color: var(--rr-color-theme-primary);
}
.category-item:hover .title a {
  color: var(--rr-color-common-white);
}
.category-item .category-more-btn {
  display: flex;
  width: 100%;
  justify-content: center;
  padding: 10px 15px;
  font-size: 13px;
  margin-top: 15px;
}

.category-carousel.swiper {
  padding-bottom: 20px;
}
.category-carousel .swiper-pagination {
  position: static;
  margin-top: 20px;
}

/* !END: Category CSS */
/**----------------------------------------
    START: Category CSS
----------------------------------------*/
.discount-item {
  background-color: var(--rr-color-grey-1);
  padding: 70px 60px;
  position: relative;
  z-index: 2;
  overflow: hidden;
}
@media only screen and (max-width: 767px) {
  .discount-item {
    padding: 50px 20px;
  }
}
.discount-item .shape {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
}
@media only screen and (max-width: 992px) {
  .discount-item .shape {
    height: 100%;
  }
}
.discount-item .men {
  position: absolute;
  bottom: 0;
  right: 2%;
  z-index: -1;
}
.discount-item .men img {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
@media only screen and (max-width: 992px) {
  .discount-item .men {
    height: 100%;
  }
}
.discount-item .content {
  position: relative;
  z-index: 1;
}
.discount-item .content span {
  font-size: 16px;
  color: var(--rr-color-theme-primary);
  margin-bottom: 20px;
  display: block;
}
.discount-item .content .title {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 20px;
}
@media (max-width: 1199px) {
  .discount-item .content .title {
    font-size: 20px;
  }
  .discount-item .content .title br {
    display: none;
  }
}
.discount-item .content a {
  display: inline-flex;
  align-items: center;
  column-gap: 15px;
  font-size: 16px;
  font-weight: 500;
  color: var(--rr-color-heading-primary);
}
.discount-item .content a:hover {
  color: var(--rr-color-theme-primary);
}
.discount-item .content a i {
  background-color: rgba(229, 62, 62, 0.15);
  height: 30px;
  width: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  color: var(--rr-color-theme-primary);
  border-radius: 50%;
}
.discount-item.item-1 .men {
  right: 13%;
}
.discount-item:hover .men img {
  transform: scale(1.03);
}

.food-discount {
  background-color: #EDDECE;
}
.food-discount .men {
  top: 0;
  right: 0;
}
.food-discount .men img {
  height: 100%;
}
.food-discount.food-discount-2 {
  background-color: #EFEEE8;
}
.food-discount .content span {
  background-color: var(--rr-color-theme-green);
  color: var(--rr-color-common-white);
  font-size: 14px;
  font-weight: 600;
  display: inline-block;
  padding: 0 10px;
  padding-right: 0;
  position: relative;
  z-index: 1;
  overflow-y: clip;
  border-radius: 4px;
}
.food-discount .content span:before {
  background-color: var(--rr-color-theme-green);
  content: "";
  width: 25px;
  height: 100%;
  position: absolute;
  top: 0;
  right: -10px;
  transform: rotate(45deg);
  z-index: -1;
  border-radius: 4px;
}
.food-discount .content .title {
  font-size: 30px;
  margin-bottom: 15px;
}
.food-discount .content p {
  margin-bottom: 20px;
}
.food-discount .content a i {
  background-color: rgba(103, 176, 46, 0.15);
}

.discount-cta-wrap {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  border-radius: 6px;
  padding-left: 15px;
  padding-right: 15px;
}
.discount-cta-wrap span {
  font-size: 20px;
  color: var(--rr-color-heading-primary);
  font-weight: 500;
}
/* ... */

